Small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>coursera</title>
 </head>
 <body>
-    <h1>first project in html using git</h1>
+    <h1>first project in html using git! it's a great course</h1>
 </body>
 </html>
